# binary-info

./: CHANGELOG.md  Cargo.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: fossa.yml  release-please.yml  workflow.yml
src/: elf.rs  error.rs  info.rs  lib.rs
tests/: node.rs
tests/data/: build_data.sh  hello-world-go  hello-world-rs
tests/data/darwin/: go-amd64  hello-world-rs-amd64
tests/data/linux/: go-amd64  go-arm64  go-x86  hello-world-go-arm
